@@ -4,6 +4,8 @@ karl package Changelog
 Unreleased
 ----------
 
+- Made mail-in processing with aliased distribution lists respect the
+  'system_list_subdomain' setting, if configuredd.  (LP #824014)
 
 
 3.70 (2011-08-25)
